# DSI_Marvel

./: .gitignore  Analysis.py  LICENSE  README.md  pyproject.toml
configs/: user_config.yml
src/Analysis_package/: Analysis.py  __init__.py
src/Analysis_package/configs/: secrets.yml  user_config.yml
src/marvel/: Analysis.py
src/marvel/configs/: system_config.yml  user_config.yml
src/marvel/tests/: test_Analysis.py
